--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <form name = "login" method = "post">
       <pre class = "loginText">Username:<input type = "text" name = "username" class = "textBoxes" id="user"/></pre>
       <pre class = "loginText">Password:<input type = "password" name = "password" class = "textBoxes" id = "pass"/></pre>
-      <input id = "loginButton" type="button" name="loginCheck" value="Entrar " onclick = "loginFunc();getUser()" />
+      <input id = "loginButton" type="button" name="loginCheck" value="Entrar " onclick = "registo()" />
     </form>
   </div>
 
