--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@ O dominó é um jogo composto por 28 peças retangulares que são constituídas 
             <tr>
               <th>USER</th>
               <th>VICTORYS</th>
-              <th>SCORE</th>
+              <th>GAMES</th>
             </tr>
             <tr>
               <th id = "namePoints"> </th>
               <th id = "victorys"> </th>
-              <th id = "valuePoints"> </th>
+              <th id = "games"> </th>
             </tr>
           </table>
         </div>
