--- a/index.html
+++ b/index.html
@@ -62,11 +62,20 @@
         <span class="close">&times;</span>
         <p id = "rulesTitle" class = "centerModal">Rules</p>
         <pre class = "rulesText">
-O dominó é um jogo composto por 28 peças retangulares que são constituídas por 2 partes quadradas em que está representado um valor de 0 a 6 em cada uma delas, não existem peças repetidas e existem todas as combinações possíveis de 2 valores de 0 a 6.
-	 No início do jogo as peças são baralhadas e são distribuídas em 3 grupos, cada jogador recebe 7 peças e as restantes 14 vão para o monte, quem tem a peça de valor mais alto inicia o jogo e coloca-a no centro do tabuleiro.
-	 Durante o jogo os jogadores jogam alternadamente, as peças jogadas formam uma fila, cada nova peça é colocada numa das extremidades da fila e o valor de duas peças justapostas tem de ser o mesmo.
-	 Se um jogador não tiver peça para jogar tem de ir ao monte e vai retirando peças até que saia uma jogável, quando acabarem as peças do monte o jogador pode passar.
-	 O jogo termina quando um jogador ficar sem peças na mão ou quando está fechado e nenhum jogador consegue jogar, considera-se fechado se aparecer o mesmo valor em ambas as extremidades e esse valor aparecer nas peças 7 vezes, neste caso ganha o jogador com menos pontos na mão, os pontos são a soma dos pares de valores das suas peças.
+    O dominó é um jogo composto por 28 peças retangulares que são constituídas por 2 partes quadradas em que está 
+    representado um valor de 0 a 6 em cada uma delas, não existem peças repetidas e existem todas as combinações 
+    possíveis de 2 valores de 0 a 6.
+    No início do jogo as peças são baralhadas e são distribuídas em 3 grupos, cada jogador recebe 7 peças 
+    e as restantes 14 vão para o monte, quem tem a peça de valor mais alto inicia o jogo e coloca-a no 
+    centro do tabuleiro.
+    Durante o jogo os jogadores jogam alternadamente, as peças jogadas formam uma fila, cada nova peça 
+    é colocada numa das extremidades da fila e o valor de duas peças justapostas tem de ser o mesmo.
+    Se um jogador não tiver peça para jogar tem de ir ao monte e vai retirando peças até que saia 
+    uma jogável, quando acabarem as peças do monte o jogador pode passar.
+    O jogo termina quando um jogador ficar sem peças na mão ou quando está fechado e nenhum jogador 
+    consegue jogar, considera-se fechado se aparecer o mesmo valor em ambas as extremidades e esse valor 
+    aparecer nas peças 7 vezes, neste caso ganha o jogador com menos pontos na mão, os pontos são a 
+    soma dos pares de valores das suas peças.
         </pre>
       </div>
     </div>
