--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <div id="leftContainer">
     <div id = "playMenu">
-        <button id="button1x1">1 vs 1</button>
+        <button id="button1x1" onclick="join()">1 vs 1</button>
         <button id="button1xpc" onclick = "disappear()">1 vs PC</button>
     </div>
   </div>
