--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </div>
     </div>
     <div id = "forfeit" >
-      <button id = "giveUp" onclick="giveGame()"> GiveUp </button>
+      <button id = "giveUp" onclick="giveGame(); desistir()"> GiveUp </button>
       <button id = "buttonPass" onclick = "passTurn()"> Passar </button>
       <button id=  "buttonDeck" onclick = "getDeck()"> Deck </button>
     </div>
