--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 </head>
 <body>
   <!-- Título -->
-  <div class="center">
-    <h1> Domino Game</h1>
-  </div>
-
+  <img src="logo.png" alt="MyLogo" class="center" id="logo">
+  <h1 id="titulo">Bem-Vindos ao nosso jogo!</h1>
   <div id = "logout" >
     <button id="buttonLogout" onclick = "logoutFunc();resetScores()">Logout</button>
     <p id = "userLogout"> </p>
