--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
       <button id=  "buttonDeck" onclick = "getDeck()"> Deck </button>
     </div>
     <div id = "forfeit2" >
-      <button id = "giveUp2" onclick="desistir()"> GiveUp </button>
-      <button id = "buttonPass2" onclick = "passTurn2()"> Passar </button>
-      <button id=  "buttonDeck2" onclick = "pedirpeca()"> Deck </button>
+      <button id = "giveUp2" onclick="desistir()" class="botoesonline"> GiveUp </button>
+      <button id = "buttonPass2" onclick = "passTurn2()" class="botoesonline"> Passar </button>
+      <button id=  "buttonDeck2" onclick = "pedirpeca()" class="botoesonline"> Deck </button>
     </div>
     <script src = "teste.js">
     </script>
