--- a/index.html
+++ b/index.html
@@ -51,10 +51,6 @@
       <div id="warnings2"></div>
       <div id="Oponente"></div>
       <div id="Board2"></div>
-      <div id="PiecePos2">
-        <button id = "left2" onclick = "playpieceplayer('0')"> Left </button>
-        <button id = "right2" onclick = "playpieceplayer('1')"> Right </button>
-      </div>
       <div id="PlayerHand2"></div>
       <div id="Deck2"></div>
     </div>
@@ -62,7 +58,7 @@
 
   <div id="leftContainer">
     <div id = "playMenu">
-        <button id="button1x1" onclick="join()">1 vs 1</button>
+        <button id="button1x1" onclick="join(); tabuleiro_on()">1 vs 1</button>
         <button id="button1xpc" onclick = "disappear()">1 vs PC</button>
     </div>
   </div>
