--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="domino.css">
   <title>DOMINÓ</title>
-  <link rel = "icon" href = "https://cdn.icon-icons.com/icons2/325/PNG/256/Letter-D-icon_34762.png" type = "image/x-icon">
+  <link rel = "icon" href = "https://s1.eestatic.com/2019/03/14/como/Juegos_de_mesa-Juego-Jugadores-Dinero-Como_hacer_383222793_117793472_1024x576.jpg" type = "image/x-icon">
 </head>
 <body>
   <!-- Título -->
