--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
       <div id="warnings2"></div>
       <div id="Oponente"></div>
       <div id="Board2"></div>
-      <div id="PlayerHand2"></div>
+      <div id="PlayerHand2">
+        <button id="esq" onclick="esq()">Esquerda</button>
+        <button id="dir" onclick="dir()">Direita</button>
+      </div>
       <div id="Deck2"></div>
     </div>
   </div>
