--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <img src="logo.png" alt="MyLogo" class="center" id="logo">
   <h1 id="titulo">Bem-Vindos ao nosso jogo!</h1>
   <div id = "logout" >
-    <button id="buttonLogout" onclick = "logoutFunc();resetScores()">Logout</button>
+    <button id="buttonLogout" onclick = "logoutFunc()">Logout</button>
     <p id = "userLogout"> </p>
   </div>
 
